fixing layout issue

--- a/app/assets/stylesheets/pages/_marketplace.scss
+++ b/app/assets/stylesheets/pages/_marketplace.scss
@@ -157,3 +157,7 @@ table  {
 #booking-card h2 {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.odometer span{
+  vertical-align: middle;
+}
